# bouncy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  event.h  main.cpp  sdl.cpp
src/: ball.cpp  ball.h  event.cpp  event.h  game.cpp  game.h  main.cpp  rand.cpp  rand.h  sdl.cpp  sdl.h  vec.cpp  vec.h  wall.cpp  wall.h
